--- a/playbook.yml
+++ b/playbook.yml
@@ -11,10 +11,10 @@
     file:
       path: /var
       mode: '0777'
-  # - name: suppression index.html
-  #   file:
-  #     path: /var/www/html/index.html
-  #     state: absent
+  - name: suppression index.html
+    file:
+      path: /var/www/html/index.html
+      state: absent
   - name: pokemon-index copy
     copy: 
       src: html/
