--- a/playbook.yml
+++ b/playbook.yml
@@ -19,7 +19,7 @@
   - name: index copy
     copy: 
       src: html/
-      dest: /var/www/html/
+      dest: /var/www/html
   - name: demarrage appache
     service:
       name: apache2
